--- a/templates/job-on-demand.yaml
+++ b/templates/job-on-demand.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.onDemand.enabled }}
-# On-demand scan job - can be triggered via Helm install
+# On-demand scan job with per-application policy gating support
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -18,6 +18,7 @@ metadata:
     {{- end }}
     bd-selfscan/scan-type: "on-demand"
     bd-selfscan/created-by: "helm"
+    bd-selfscan/policy-gating: "per-application"
 spec:
   # Job configuration
   backoffLimit: {{ .Values.scanner.job.backoffLimit }}
@@ -40,6 +41,7 @@ spec:
         {{- if .Values.scanTarget }}
         bd-selfscan/target-application: {{ .Values.scanTarget | quote }}
         {{- end }}
+        bd-selfscan/policy-gating: "per-application"
     spec:
       serviceAccountName: {{ include "bd-selfscan.serviceAccountName" . }}
       restartPolicy: Never
@@ -77,7 +79,7 @@ spec:
           image: {{ .Values.scanner.image }}
           imagePullPolicy: {{ .Values.scanner.imagePullPolicy }}
 
-          # UPDATED: Command execution with proper error handling and bash shell
+          # Command execution with proper error handling and bash shell
           {{- if .Values.scanTarget }}
           # Single application scan
           command: ["/bin/bash"]
@@ -104,7 +106,7 @@ spec:
               exit $exit_code
           {{- end }}
 
-          # Environment variables
+          # Environment variables - UPDATED: Removed global POLICY_FAIL_SEVERITIES
           env:
             # Black Duck configuration
             - name: BD_URL
@@ -122,17 +124,19 @@ spec:
             - name: TRUST_CERT
               value: "{{ .Values.blackduck.trustCert }}"
 
-            # Scanning configuration
+            # Scanning configuration (no longer includes global policy settings)
             - name: PROJECT_TIER
               value: "{{ .Values.scanning.projectTier }}"
-            - name: POLICY_FAIL_SEVERITIES
-              value: {{ .Values.scanning.policyFailSeverities | quote }}
             - name: IMAGE_DOWNLOAD_TIMEOUT
               value: "{{ .Values.scanning.imageDownloadTimeout }}"
             - name: IMAGE_DOWNLOAD_RETRIES
               value: "{{ .Values.scanning.imageDownloadRetries }}"
             - name: SCAN_TIMEOUT
               value: "{{ .Values.scanning.scanTimeout }}"
+
+            # REMOVED: POLICY_FAIL_SEVERITIES - now determined per application
+            # Policy enforcement is now controlled via policyGating and policyGatingRisk
+            # fields in the applications.yaml configuration
 
             # Debug configuration
             - name: DEBUG_ENABLED
@@ -161,6 +165,10 @@ spec:
             # Configuration file path
             - name: CONFIG_FILE
               value: "/config/applications.yaml"
+
+            # Policy gating mode indicator
+            - name: POLICY_GATING_MODE
+              value: "per-application"
 
           # Resource limits
           resources:
