--- a/values.yaml
+++ b/values.yaml
@@ -1,6 +1,6 @@
-# BD SelfScan Enhanced Configuration Values
+# BD SelfScan Enhanced Configuration Values with Per-Application Policy Gating
 # This file contains enhanced configuration values for the BD SelfScan Helm chart
-# Includes security best practices and DevSecOps improvements
+# Includes security best practices and DevSecOps improvements with per-application policy enforcement
 
 # Global configuration
 global:
@@ -59,8 +59,29 @@ automated:
 # Scan target (for on-demand scanning)
 scanTarget: ""
 
-# Application configuration
+# Application configuration - can be provided via values or file
+# When provided here, these override the configs/applications.yaml file
+# Example applications with per-application policy gating:
 applications: []
+  # - name: "Production API"
+  #   namespace: "production"
+  #   labelSelector: "app=api-gateway"
+  #   policyGating: true                    # Enable policy enforcement
+  #   policyGatingRisk: "BLOCKER,CRITICAL" # Fail on these severities
+  #   projectGroup: "Production Services"
+  #   projectTier: 1
+  #   projectPhase: "RELEASED"
+  #   description: "Critical production API with strict enforcement"
+  # 
+  # - name: "Development Tools"
+  #   namespace: "dev-tools"
+  #   labelSelector: "app=dev-dashboard"
+  #   policyGating: false                   # Discovery mode
+  #   policyGatingRisk: ""                  # Ignored when gating disabled
+  #   projectGroup: "Development Tools"
+  #   projectTier: 4
+  #   projectPhase: "DEVELOPMENT"
+  #   description: "Development tools in discovery mode"
 
 # ConfigMap configuration
 configMap:
@@ -144,10 +165,15 @@ scanner:
     enabled: false  # Preferred: false for security
     # enabled: true  # Only if container inspection requires direct Docker access
 
-# Scanning configuration with enhanced controls
+# Scanning configuration with enhanced controls and per-application policy gating
 scanning:
-  projectTier: 3
-  policyFailSeverities: "CRITICAL,BLOCKER"
+  projectTier: 3  # Default tier, can be overridden per application
+  
+  # REMOVED: Global policyFailSeverities setting
+  # Policy enforcement is now controlled per application via:
+  #   policyGating: true/false         (enable/disable enforcement)
+  #   policyGatingRisk: "BLOCKER,..."  (severity levels that cause failures)
+  # This provides granular control allowing different apps to have different enforcement levels
 
   # Performance tuning
   imageDownloadTimeout: 600
@@ -166,7 +192,7 @@ scanning:
   enableLicenseScanning: true
   enableOperationalRisks: true
 
-  # Policy enforcement
+  # Policy enforcement - now managed per application
   enforceProjectTierPolicies: true
   blockDeploymentOnPolicyViolation: false  # Set to true for production enforcement
 
@@ -328,7 +354,7 @@ testing:
     concurrentScans: 5
     testDuration: "10m"
 
-# ADDED: Security context profiles for different environments
+# Security context profiles for different environments
 securityProfiles:
   # Development profile - more permissive for troubleshooting
   development:
@@ -366,7 +392,7 @@ securityProfiles:
           drop: ["ALL"]
           add: ["DAC_OVERRIDE", "FOWNER"]  # Minimal set
 
-# ADDED: Troubleshooting helpers
+# Troubleshooting helpers
 troubleshooting:
   # Enable debug pod for testing
   debugPod:
@@ -378,3 +404,69 @@ troubleshooting:
   logCollection:
     enabled: true
     retention: "7d"
+
+# Per-Application Policy Gating Documentation:
+#
+# POLICY GATING OVERVIEW:
+# BD SelfScan now supports per-application policy enforcement via the applications.yaml configuration.
+# This allows different applications to have different security requirements while maintaining 
+# a single scanning infrastructure.
+#
+# CONFIGURATION FIELDS (in applications.yaml):
+#   policyGating: true/false         - Enable/disable policy enforcement for this application
+#   policyGatingRisk: "BLOCKER,..."  - Comma-separated severity levels that cause failures
+#
+# ENFORCEMENT MODES:
+#   Discovery Mode (policyGating: false):
+#     - Scans always succeed regardless of findings
+#     - All vulnerabilities reported to Black Duck for visibility
+#     - Perfect for legacy systems, testing, or initial rollout
+#   
+#   Enforcement Mode (policyGating: true):
+#     - Scans can fail on policy violations
+#     - Build/deployment blocked when violations found
+#     - Granular control via policyGatingRisk setting
+#
+# POLICY SEVERITY LEVELS:
+#   BLOCKER   - Must fix immediately (all tiers should include)
+#   CRITICAL  - High-severity vulnerabilities (tier 1-3)
+#   HIGH      - Important security issues (tier 1-2)
+#   MEDIUM    - Moderate concerns (tier 1 only)
+#   LOW       - Minor issues (rarely used for blocking)
+#   TRIVIAL   - Informational (rarely used for blocking)
+#
+# RECOMMENDED CONFIGURATIONS BY TIER:
+#   Tier 1 (Critical):    policyGating: true, policyGatingRisk: "BLOCKER,CRITICAL,HIGH"
+#   Tier 2 (High):        policyGating: true, policyGatingRisk: "BLOCKER,CRITICAL"  
+#   Tier 3 (Medium):      policyGating: true, policyGatingRisk: "BLOCKER,CRITICAL"
+#   Tier 4 (Low):         policyGating: false (discovery mode)
+#
+# MIGRATION STRATEGY:
+#   Week 1-2: All applications with policyGating: false (discovery mode)
+#   Week 3-4: Non-critical apps with policyGating: true, policyGatingRisk: "BLOCKER"
+#   Week 5+:  Gradually tighten policies based on application criticality
+#
+# EXAMPLE CONFIGURATION:
+# applications:
+#   - name: "Payment API"
+#     namespace: "payments"
+#     labelSelector: "app=payment-api"
+#     policyGating: true                    # Enable enforcement
+#     policyGatingRisk: "BLOCKER,CRITICAL" # Block on these severities
+#     projectGroup: "Financial Services"
+#     projectTier: 1
+#     description: "Critical payment processing with strict enforcement"
+#   
+#   - name: "Admin Tools"
+#     namespace: "admin"
+#     labelSelector: "app=admin-dashboard"
+#     policyGating: false                   # Discovery mode
+#     policyGatingRisk: ""                  # Ignored when gating disabled
+#     projectGroup: "Internal Tools"
+#     projectTier: 4
+#     description: "Internal tools in discovery mode"
+#
+# TESTING COMMANDS:
+#   kubectl exec -it <pod> -- /scripts/test-policy-gating.sh
+#   kubectl exec -it <pod> -- /scripts/simulate-policy-enforcement.sh "App Name" critical
+#   kubectl exec -it <pod> -- /scripts/policy-gating-preview.sh
